# Bill_Extractor

./: .env.example  .gitignore  bills.csv  docker-compose.prod.yml  docker-compose.yml  generate_bills.py  render.yaml
backend/: .dockerignore  .env  Dockerfile  main.py  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 651a7d4e5a25_create_bills_table.py
backend/app/api/: bills.py  export.py  upload.py
backend/app/core/: config.py  database.py  exceptions.py  logger.py
backend/app/extractors/: field_patterns.py  parser.py  pdf_extractor.py
backend/app/models/: __init__.py  bill.py
backend/app/schemas/: bill.py  upload.py
backend/app/services/: bill_service.py  csv_service.py  upload_service.py
backend/app/utils/: file_utils.py
docker/nginx/: nginx.conf  nginx.prod.conf
docker/postgres/: init.sql
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx
frontend/src/api/: bills.ts
frontend/src/components/: BillDetailsDialog.tsx  BillTable.tsx  DateFilter.tsx  EmptyState.tsx  Loading.tsx  Navbar.tsx  Sidebar.tsx  UploadCard.tsx
frontend/src/components/ui/: alert-dialog.tsx  dialog.tsx
frontend/src/pages/: Bills.tsx  Dashboard.tsx  NotFound.tsx  Upload.tsx
frontend/src/types/: index.ts
scripts/: setup-ssl.sh
